--- a/porter.yaml
+++ b/porter.yaml
@@ -1,5 +1,5 @@
 name: geauxai-studio
-version: 0.1.0
+version: v1.0
 description: "A user-friendly, multi-platform GUI for managing and running CrewAI agents and tasks. Supports Conda and virtual environments, no coding needed."
 
 invocationImage: ghcr.io/geaux-specialist-l-l-c/geauxai-studio:latest
@@ -9,14 +9,23 @@ mixins:
   - exec
   - docker
 
-install:
-  - description: "Install dependencies and setup the environment."
-    exec:
-      command: |
-        apt update && apt upgrade -y
-        apt-get install build-essential -y
-        pip install --upgrade pip
-        pip install -r /CrewAI-Studio/requirements.txt
+services:
+  - name: web
+    type: web
+    port: 8501
+    install:
+      - description: "Install dependencies and setup the environment."
+        exec:
+          command: |
+            apt update && apt upgrade -y
+            apt-get install build-essential -y
+            pip install --upgrade pip
+            pip install -r /CrewAI-Studio/requirements.txt
+    invoke:
+      - description: "Run the application."
+        exec:
+          command: |
+            streamlit run /CrewAI-Studio/app/app.py --server.headless true
 
 uninstall:
   - description: "Clean up installed packages."
@@ -24,7 +33,3 @@ uninstall:
       command: |
         apt-get remove --purge build-essential -y
         apt-get autoremove -y
-
-invoke:
-  - description: "Run the application."
-    exec:
