--- a/porter.yaml
+++ b/porter.yaml
@@ -1,35 +1,31 @@
+version: v2
 name: geauxai-studio
-version: v1.0
 description: "A user-friendly, multi-platform GUI for managing and running CrewAI agents and tasks. Supports Conda and virtual environments, no coding needed."
-
-invocationImage: ghcr.io/geaux-specialist-l-l-c/geauxai-studio:latest
-dockerfile: Dockerfile
-
-mixins:
-  - exec
-  - docker
 
 services:
   - name: web
     type: web
     port: 8501
-    install:
-      - description: "Install dependencies and setup the environment."
-        exec:
-          command: |
-            apt update && apt upgrade -y
-            apt-get install build-essential -y
-            pip install --upgrade pip
-            pip install -r /CrewAI-Studio/requirements.txt
-    invoke:
-      - description: "Run the application."
-        exec:
-          command: |
-            streamlit run /CrewAI-Studio/app/app.py --server.headless true
+    run: streamlit run /CrewAI-Studio/app/app.py --server.headless true
+    instances: 1
+    cpuCores: 1
+    ramMegabytes: 1024
 
-uninstall:
-  - description: "Clean up installed packages."
-    exec:
-      command: |
-        apt-get remove --purge build-essential -y
-        apt-get autoremove -y
+build:
+  method: docker
+  context: .
+  dockerfile: Dockerfile
+
+env:
+  OPENAI_API_KEY: "your-azure-openai-key"
+  OPENAI_API_BASE: "https://your-azure-openai-endpoint"
+
+predeploy:
+  run: |
+    apt update && apt upgrade -y
+    apt-get install build-essential -y
+    pip install --upgrade pip
+    pip install -r /CrewAI-Studio/requirements.txt
+
+autoRollback:
+  enabled: true
